# desktop-unstable

./: NEXTCLOUD.cmake  README.md  theme.qrc
src/gui/: CMakeLists.txt  legalnotice.cpp
src/gui/tray/: ActivityItem.qml  activitydata.h  activitylistmodel.cpp  activitylistmodel.h  usermodel.cpp
src/gui/wizard/: owncloudsetupnocredspage.ui  webviewpage.cpp  welcomepage.cpp  welcomepage.ui
src/libsync/: discovery.cpp  discoveryphase.h  nextcloudtheme.cpp  propagateremotemove.cpp  propagateupload.cpp  theme.cpp
test/: testlocaldiscovery.cpp  testsyncvirtualfiles.cpp
